# sentinel-platform-v1

./: .env.example  .gitignore  README.md  docker-compose.yml
db/: init.sql
lumenlog/: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
lumenlog/.devcontainer/: devcontainer-lock.json  devcontainer.json
lumenlog/.github/workflows/: ci.yml
lumenlog/agent/: Cargo.toml  Dockerfile  build.rs
lumenlog/agent/src/: main.rs
lumenlog/clickhouse/: init.sql
lumenlog/cmd/alerter/: Dockerfile  main.go  main_test.go
lumenlog/cmd/ingestor/: Dockerfile  main.go  main_test.go
lumenlog/proto/: log.proto
sentinel-proxy/: .env.example  Dockerfile  README.md
sentinel-proxy/.github/workflows/: ci.yml
sentinel-proxy/cmd/sentinel/: main.go
sentinel-proxy/internal/events/: event.go  sender.go
sentinel-proxy/internal/integration/: proxy_integration_test.go
sentinel-proxy/internal/metrics/: metrics.go
sentinel-proxy/internal/middleware/: cors.go  ratelimit.go  waf.go
sentinel-proxy/internal/proxy/: proxy.go
sentinel-proxy/internal/rules/: engine.go  rules.json
sentinel-proxy/internal/services/: alert.go
sentinel-proxy/web/static/: index.html
zero-trust-idp/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
zero-trust-idp/.github/workflows/: ci.yml
zero-trust-idp/db/: db.go
zero-trust-idp/handlers/: auth.go  logout.go  refresh.go  registration.go  tokens.go
zero-trust-idp/internal/crypto/: keys.go
zero-trust-idp/middleware/: cors.go
zero-trust-idp/static/: index.html
