[package]
name = "lumen-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lumen-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
prost = "0.13"
rdkafka = { version = "0.38", features = ["cmake-build"] }

[build-dependencies]
prost-build = "=0.12.0"